editing and figures

--- a/dev/package/analysis/notebooks/Descriptives.ipynb
+++ b/dev/package/analysis/notebooks/Descriptives.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -529,18 +529,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "reload = False"
+    "reload = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -552,29 +552,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "logManager - INFO - prepare_dataset | Started\n",
-      "logManager - INFO - get_slice | Started\n",
-      "logManager - INFO - get_slice | Passed | 0.20\n",
-      "logManager - INFO - prepare_dataset | Passed | 26.09\n",
-      "logManager - INFO - add_stages | Started\n",
-      "logManager - INFO - add_stages | Passed | 41.97\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "try:\n",
-    "    if reload: data = pd.read_pickle(pickle_path)\n",
-    "    else: raise IOError\n",
-    "except IOError: \n",
+    "def get_data():\n",
     "    data = load_data()\n",
     "    data = data.loc[data['keys_company_stage_group'] == \"Included\"]\n",
     "    cutoff = data[\"confidence_context_economy_company_age_number\"][data[\"keys_company_stage\"] == \"Series D+\"].quantile(0.75)\n",
@@ -585,12 +569,28 @@
     "    data[\"keys_missing_features\"] = X.isnull().sum(axis=1)\n",
     "    data[\"total_features\"] = len(list(X))\n",
     "    data = data[[\"keys_company_stage\", \"confidence_context_economy_company_age_number\", \"confidence_validation_funding_raised_value_total_number\", \"confidence_validation_funding_rounds_number\", \"potential_structural_patents_number\", \"keys_missing_features\", \"total_features\", \"keys_company_stage_group\"]]\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    if reload: data = pd.read_pickle(pickle_path)\n",
+    "    else: raise IOError\n",
+    "except IOError: \n",
+    "    data = get_data()\n",
     "    data.to_pickle(pickle_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -598,20 +598,20 @@
    "source": [
     "data[\"keys_company_stage2\"] = data[\"keys_company_stage\"]\n",
     "columns = [\"keys_company_stage\", \"confidence_context_economy_company_age_number\", \"confidence_validation_funding_raised_value_total_number\", \"confidence_validation_funding_rounds_number\", \"potential_structural_patents_number\", \"keys_missing_features\"]\n",
-    "colnames = [\"Obs\", \"Age (Years)\", \"Funding Raised (USD, millions)\", \"Funding Rounds (N)\",\"Patent Filings (N)\", \"Available Features (N)\"]\n",
+    "colnames = [\"Obs\", \"Age (Years)\", \"Funding Raised (USD, M)\", \"Funding Rounds (N)\",\"Patent Filings (N)\", \"Available Features (N)\"]\n",
     "colfuncs = [{\"N\":len}, \n",
-    "    OrderedDict([(\"Median\", np.median),(\"IQR\", lambda x: stats.iqr(x,nan_policy=\"omit\"))]), \n",
-    "    OrderedDict([(\"Median\", lambda x: np.median(x) / 1e6), (\"IQR\", lambda x: stats.iqr(x,nan_policy=\"omit\") / 1e6)]), \n",
-    "    OrderedDict([(\"Median\", np.median),(\"IQR\", lambda x: stats.iqr(x,nan_policy=\"omit\"))]), \n",
-    "    OrderedDict([(\"50th\", np.median),(\"75th\", lambda x: np.nanpercentile(x,75)),(\"90th\", lambda x: np.nanpercentile(x,90))]), \n",
-    "    OrderedDict([(\"Median\", lambda x: data[\"total_features\"].sample(1).values[0] - np.median(x)), (\"IQR\", lambda x: stats.iqr(x,nan_policy=\"omit\") )])]\n",
+    "    OrderedDict([(\"50th\", np.median),(\"75th\", lambda x: np.nanpercentile(x,75))]), \n",
+    "    OrderedDict([(\"50th\", lambda x: np.median(x) * 1e-6),(\"75th\", lambda x: np.nanpercentile(x,75) * 1e-6)]), \n",
+    "    OrderedDict([(\"50th\", np.median),(\"75th\", lambda x: np.nanpercentile(x,75))]), \n",
+    "    OrderedDict([(\"75th\", lambda x: np.nanpercentile(x,75)),(\"90th\", lambda x: np.nanpercentile(x,90))]), \n",
+    "    OrderedDict([(\"50th\", lambda x: data[\"total_features\"].sample(1).values[0] - np.median(x)), (\"75th\", lambda x:data[\"total_features\"].sample(1).values[0] -  np.nanpercentile(x,25) )])]\n",
     "namefunc = OrderedDict(zip(columns, colnames))\n",
     "aggfunc = OrderedDict(zip(columns, colfuncs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -636,170 +636,162 @@
        "      <th></th>\n",
        "      <th>Obs</th>\n",
        "      <th colspan=\"2\" halign=\"left\">Age (Years)</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Funding Raised (USD, millions)</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Funding Raised (USD, M)</th>\n",
        "      <th colspan=\"2\" halign=\"left\">Funding Rounds (N)</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Patent Filings (N)</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Patent Filings (N)</th>\n",
        "      <th colspan=\"2\" halign=\"left\">Available Features (N)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>N</th>\n",
-       "      <th>IQR</th>\n",
-       "      <th>Median</th>\n",
-       "      <th>IQR</th>\n",
-       "      <th>Median</th>\n",
-       "      <th>IQR</th>\n",
-       "      <th>Median</th>\n",
        "      <th>50th</th>\n",
        "      <th>75th</th>\n",
+       "      <th>50th</th>\n",
+       "      <th>75th</th>\n",
+       "      <th>50th</th>\n",
+       "      <th>75th</th>\n",
+       "      <th>75th</th>\n",
        "      <th>90th</th>\n",
-       "      <th>IQR</th>\n",
-       "      <th>Median</th>\n",
+       "      <th>50th</th>\n",
+       "      <th>75th</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Pre-Seed</th>\n",
        "      <td>113915</td>\n",
-       "      <td>3.737</td>\n",
        "      <td>4.362</td>\n",
+       "      <td>6.364</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>128.0</td>\n",
        "      <td>25</td>\n",
+       "      <td>133.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Seed</th>\n",
        "      <td>38942</td>\n",
-       "      <td>4.003</td>\n",
        "      <td>4.663</td>\n",
-       "      <td>1.295</td>\n",
+       "      <td>6.693</td>\n",
        "      <td>0.250</td>\n",
+       "      <td>1.300</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>125.0</td>\n",
        "      <td>178</td>\n",
+       "      <td>231.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Series A</th>\n",
        "      <td>6615</td>\n",
-       "      <td>5.005</td>\n",
        "      <td>5.693</td>\n",
-       "      <td>7.906</td>\n",
+       "      <td>8.696</td>\n",
        "      <td>4.400</td>\n",
+       "      <td>9.406</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>117.5</td>\n",
        "      <td>239</td>\n",
+       "      <td>301.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Series B</th>\n",
        "      <td>3342</td>\n",
-       "      <td>5.918</td>\n",
        "      <td>7.608</td>\n",
-       "      <td>22.032</td>\n",
+       "      <td>10.696</td>\n",
        "      <td>14.891</td>\n",
-       "      <td>2</td>\n",
+       "      <td>28.200</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>87.0</td>\n",
        "      <td>255</td>\n",
+       "      <td>314.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Series C</th>\n",
        "      <td>1610</td>\n",
-       "      <td>5.523</td>\n",
        "      <td>8.696</td>\n",
-       "      <td>45.881</td>\n",
+       "      <td>11.696</td>\n",
        "      <td>35.285</td>\n",
-       "      <td>2</td>\n",
+       "      <td>62.000</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>9</td>\n",
-       "      <td>80.0</td>\n",
        "      <td>305</td>\n",
+       "      <td>321.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Series D+</th>\n",
        "      <td>998</td>\n",
-       "      <td>5.005</td>\n",
        "      <td>9.696</td>\n",
-       "      <td>90.300</td>\n",
+       "      <td>12.699</td>\n",
        "      <td>74.385</td>\n",
-       "      <td>3</td>\n",
+       "      <td>130.841</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>4</td>\n",
        "      <td>19</td>\n",
-       "      <td>69.0</td>\n",
        "      <td>319</td>\n",
+       "      <td>330.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Included</th>\n",
        "      <td>165422</td>\n",
-       "      <td>4.003</td>\n",
        "      <td>4.688</td>\n",
-       "      <td>3.970</td>\n",
+       "      <td>6.693</td>\n",
        "      <td>0.000</td>\n",
+       "      <td>4.000</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>145.0</td>\n",
        "      <td>90</td>\n",
+       "      <td>160.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Obs Age (Years)        Funding Raised (USD, millions)          \\\n",
-       "                N         IQR Median                            IQR  Median   \n",
-       "Pre-Seed   113915       3.737  4.362                          0.000   0.000   \n",
-       "Seed        38942       4.003  4.663                          1.295   0.250   \n",
-       "Series A     6615       5.005  5.693                          7.906   4.400   \n",
-       "Series B     3342       5.918  7.608                         22.032  14.891   \n",
-       "Series C     1610       5.523  8.696                         45.881  35.285   \n",
-       "Series D+     998       5.005  9.696                         90.300  74.385   \n",
-       "Included   165422       4.003  4.688                          3.970   0.000   \n",
+       "              Obs Age (Years)         Funding Raised (USD, M)           \\\n",
+       "                N        50th    75th                    50th     75th   \n",
+       "Pre-Seed   113915       4.362   6.364                   0.000    0.000   \n",
+       "Seed        38942       4.663   6.693                   0.250    1.300   \n",
+       "Series A     6615       5.693   8.696                   4.400    9.406   \n",
+       "Series B     3342       7.608  10.696                  14.891   28.200   \n",
+       "Series C     1610       8.696  11.696                  35.285   62.000   \n",
+       "Series D+     998       9.696  12.699                  74.385  130.841   \n",
+       "Included   165422       4.688   6.693                   0.000    4.000   \n",
        "\n",
-       "          Funding Rounds (N)        Patent Filings (N)            \\\n",
-       "                         IQR Median               50th 75th 90th   \n",
-       "Pre-Seed                   0      0                  0    0    0   \n",
-       "Seed                       1      1                  0    0    1   \n",
-       "Series A                   2      2                  0    0    2   \n",
-       "Series B                   2      3                  0    0    4   \n",
-       "Series C                   2      3                  0    1    9   \n",
-       "Series D+                  3      5                  0    4   19   \n",
-       "Included                   1      1                  0    0    1   \n",
+       "          Funding Rounds (N)      Patent Filings (N)       \\\n",
+       "                        50th 75th               75th 90th   \n",
+       "Pre-Seed                   0    0                  0    0   \n",
+       "Seed                       1    2                  0    1   \n",
+       "Series A                   2    3                  0    2   \n",
+       "Series B                   3    4                  0    4   \n",
+       "Series C                   3    5                  1    9   \n",
+       "Series D+                  5    7                  4   19   \n",
+       "Included                   1    2                  0    1   \n",
        "\n",
        "          Available Features (N)         \n",
-       "                             IQR Median  \n",
-       "Pre-Seed                   128.0     25  \n",
-       "Seed                       125.0    178  \n",
-       "Series A                   117.5    239  \n",
-       "Series B                    87.0    255  \n",
-       "Series C                    80.0    305  \n",
-       "Series D+                   69.0    319  \n",
-       "Included                   145.0     90  "
+       "                            50th   75th  \n",
+       "Pre-Seed                      25  133.0  \n",
+       "Seed                         178  231.0  \n",
+       "Series A                     239  301.5  \n",
+       "Series B                     255  314.0  \n",
+       "Series C                     305  321.0  \n",
+       "Series D+                    319  330.0  \n",
+       "Included                      90  160.0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +812,7 @@
    "outputs": [],
    "source": [
     "output_path =  \"{}/{}.tex\".format(SAVE_PATH, chart_id)\n",
-    "table.to_latex(output_path)"
+    "table.to_latex(output_path,multicolumn =True, multicolumn_format =\"c\")"
    ]
   },
   {
