--- a/submissions/thesis-original/conclusions/conclusions.tex
+++ b/submissions/thesis-original/conclusions/conclusions.tex
@@ -4,19 +4,22 @@
  \chapter{Conclusions}
  \label{chap:conclusions}
 
-Our project's aim was to produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system uses online data sources and machine learning to identify startups that are likely to receive additional funding or exit in a given forecast window. While this is a challenging problem even for experienced \gls{vc} investors, our system achieved results that have practical application for \gls{vc} firms.
+Our project's aim was to produce a \gls{vc} investment screening system that is practical, robust and versatile. Our system uses online data sources and machine learning to identify startups that are likely to raise additional funding, become acquired or have an \gls{ipo} (or some combination therof) in a given period of time. While this is a challenging problem even for experienced \gls{vc} investors, our system achieved results that have practical application for \gls{vc} firms.
 
 \section{Evaluation of Criteria}
 
-\subsection{Efficiency}
+\subsection{Practicality}
 
-Our system intends to replace manual investment screening (referral, Google search, industry papers, and manual search of startup databases). Our automated system should be more efficient than these methods because it requires less human input. We also evaluated our system's efficiency based on dataset size and time profile. Our system is relatively robust to dataset size, because it optimises the classification pipeline based on the datasets available. In some cases, our system could use smaller training sets without significant reduction in predictive power. However, our system's ability to use smaller training sets was related to the length of the desired forecast window, and the breadth of the target outcome. An indicative implementation of our system takes 46 hours to run, which is reasonable for a process that is not time-sensitive in this industry. The majority of this time is due to the pipeline optimisation process. However, when placed into production, this could be run less frequently with minimal reduction in performance.
+Our system intends to replace manual investment screening (referral, Google search, industry papers, and manual search of startup databases). Our automated system should be more efficient than these methods because it requires less human input. We also evaluated our system's efficiency based on dataset size and time profile. An indicative implementation of our system takes 46 hours to run, which is reasonable for a process that is not time-sensitive in this industry. The majority of this time is due to the pipeline optimisation process. However, when placed into production, this could be run less frequently with minimal reduction in performance.
 
 \subsection{Robustness}
 
 Our system must be robust in its performance with respect to time so investors can rely on its predictions. The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
 
-\subsection{Predictive Power}
+%Robust to quantum and type of data
+Our system is relatively robust to dataset size, because it optimises the classification pipeline based on the datasets available. In some cases, our system could use smaller training sets without significant reduction in predictive power. However, our system's ability to use smaller training sets was related to the length of the desired forecast window, and the breadth of the target outcome.
+
+\subsection{Versatility}
 
 Our system must be consistently accurate at identifying a variety of high-potential investment candidates. Unlike previous studies, we evaluated the systems' predictive power across a large problem domain, including predicting over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an \gls{ipo}. Where comparable, our system produced better or similar results to previous studied systems.
 
@@ -32,9 +35,9 @@ While this project was likely the most comprehensive study of startup investment
 
 \section{Summary}
 
-In this project we set out to create a \gls{vc} investment screening system that met our criteria of efficiency, robustness, and predictive power, and we have indeed created such a system. The work required to achieve this project's goals was extensive, from reviewing the state of startup and venture capital theory and applied machine learning in this field, to developing data collection and manipulation systems for our data sources, to developing a classification pipeline optimisation process, and performing experiments that validate the ability of the system to meet our aforementioned criteria.
+In this project we set out to create a \gls{vc} investment screening system that met our criteria of practicality, robustness, and versatility, and we have indeed created such a system. The work required to achieve this project's goals was extensive, from reviewing the state of \gls{vc} theory and machine learning as applied to this field, to developing systems that collect and manipulate data from CrunchBase and PatentsView, to developing an adaptive classification pipeline process, and finally performing experiments that validate the ability of the system to meet our aforementioned criteria.
 
-This project makes three primary contributions with implications for industry and research. First, our system is near-ready for direct application to the \gls{vc} industry: it is near-autonomous, robust to changes in dataset and prediction task, and uses diverse features collected from large public online databases. Second, our system's performance is not only better or comparable to previous studies, it also addresses a far larger domain of investment prediction tasks (with respect to forecast window, developmental stage and target outcome). Third, this project contributes an empirical study of models of startup investment performance more comprehensive than any found in the literature. In conclusion, this project makes significant steps towards automation of the \gls{vc} industry.
+This project makes three primary contributions with implications for industry and research. First, our system is designed for the \gls{vc} industry: it is near-autonomous, robust to changes in dataset and prediction task, and uses diverse features collected from large public online databases. Second, our system's performance is not only better or comparable to previous studies, it also addresses a far larger domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. Third, this project contributes an empirical study of models of startup investment performance more comprehensive than any found in the literature. Ultimately, this project makes steps towards automation in the \gls{vc} industry.
 
  \ifcsdef{mainfile}{}{\printbibliography}
 \end{document}
