--- a/submissions/thesis-original/design/appendices.tex
+++ b/submissions/thesis-original/design/appendices.tex
@@ -1,2 +1,3 @@
+\subfile{../appendices/design/feature_selection}
 \subfile{../appendices/design/database_schema}
 \subfile{../appendices/design/pipeline_hyperparameters}
