--- a/submissions/thesis-original/discussion/discussion.tex
+++ b/submissions/thesis-original/discussion/discussion.tex
@@ -4,11 +4,11 @@
 \chapter{Discussion}
 \label{chap:discussion}
 
-In previous chapters, we outlined how we designed and evaluated a novel data mining system for automated \gls{vc} investment screening. In this chapter, we discuss the merits of this project with respect to our system's design and performance, and its contribution to theory on startup investment performance.
+In previous chapters, we outlined how we designed and evaluated a novel data mining system for automated \gls{vc} investment screening. In this chapter, we discuss the merits of this project with respect to our system's design, our system's performance, and its contribution to theory on startup investment.
 
 \begin{enumerate}
 
-\item System Design. We developed a data mining system that provides automated \gls{vc} investment screening. Our system uses data collected from CrunchBase and PatentsView. We found that CrunchBase and PatentsView databases are large, comprehensive, and growing. However, CrunchBase records are sparse, long-tailed, and require cleaning. PatentsView features have a positive impact on the system's performance. Our system generates a classification pipeline optimised to the dataset. We found classification algorithm tuning had the greatest impact on performance during optimisation. In particular, Random Forests and Logistic Regressions were the most successful classifiers, Support Vector Machines and Artificial Neural Networks underperformed. We found that the top 3-5 pipelines generated from the optimisation process should be checked for their robustness over time. A limitation of our design is that the dataset slicing technique may introduce biases related to artificial completeness. Our system is semi-autonomous but could be made fully autonomous with further development.
+\item System Design. We developed a data mining system that provides automated \gls{vc} investment screening. Our system uses data collected from CrunchBase and PatentsView. We found that CrunchBase and PatentsView databases are large, comprehensive, and growing. However, CrunchBase records are sparse, long-tailed, and require cleaning. PatentsView features have minimal overall impact on the system's performance, but provide a significant improvement in prediction performance for companies at later developmental stages. Our system generates a classification pipeline optimised to the dataset. We found classification algorithm tuning had the greatest impact on performance during optimisation. In particular, Random Forests and Logistic Regressions were the most successful classifiers, Support Vector Machines and Artificial Neural Networks underperformed. We found that the top 3-5 pipelines generated from the optimisation process should be checked for their robustness over time. A limitation of our design is that the dataset slicing technique may introduce biases related to artificial completeness. Our system is semi-autonomous but could be made fully autonomous with further development.
 
 \item System Performance. We evaluated the performance of our \gls{vc} investment screening system. We found that our system's performance is robust with respect to historical datasets (for 2012-16), which makes it suitable for forward-looking predictions. We found that the performance of our system was better or comparable to previous results from the literature. Performance was positively related to longer forecast window (for a period of 2-4 years), later developmental stage (e.g Series C, Series D+), and breadth of target outcome (e.g. Exit). Our system's observed performance may have been improved further if we had performed pipeline optimisation separately for each experiment. A limitation of our system is that some nuances of investment success are not fully captured (e.g. down-rounds, acqui-hires). However, we still believe our system has performance practical for use in investment screening.
 
@@ -72,7 +72,7 @@ While our target outcomes provide a rough proxy for investment success, there ar
 
 \subsection{Experimental Design}
 
-Our experimental design involved evaluating the performance of the system across a range of variables, including size of training set, date of training set, duration of forecast window, company developmental stage, and target outcome. For each of these experiments, we manipulated these variables during the model fit and prediction step of our system design. However, to reduce the time taken by our experiments, we used the same optimised pipeline for each experiment (for the configuration, see Appendix\ref{appendix:base_config}). This pipeline optimisation step takes the vast majority of time of our system (84.8\%). By using a pipeline optimised for different objectives we are likely to have under-reported the performance of our system. In future research, it would be interesting to determine the extent to which the results of our pipeline optimisation changes with respect to these variables and the extent to which our results improve.
+Our experimental design involved evaluating the performance of the system across a range of variables, including size of training set, date of training set, duration of forecast window, company developmental stage, and target outcome. For each of these experiments, we manipulated these variables during the model fit and prediction step of our system design. However, to reduce the time taken by our experiments, we used the same optimised pipeline for each experiment (for the configuration, see Appendix\ref{appendix:experimental_config}). This pipeline optimisation step takes the vast majority of time of our system (84.8\%). By using a pipeline optimised for different objectives we are likely to have under-reported the performance of our system. In future research, it would be interesting to determine the extent to which the results of our pipeline optimisation changes with respect to these variables and the extent to which our results improve.
 
 \section{Model Evaluation}
 
@@ -84,13 +84,13 @@ We evaluated our system by training it on a range of historical datasets from 20
 
 \subsection{Developmental Stage}
 
-We evaluated our system with respect to the developmental stage of our target companies. We found considerable variation in models developed for companies of different stages. We find that Advisors are more important to earlier stage companies than late stage companies. This is a surprising and perhaps counter-intuitive finding that has not been previously substantiated in the literature. One explanation is that successful startups recruit experienced, influential advisors earlier to fill in gaps in their experience but by the time these startups reach later-rounds, this advantage is neutralised by the effect of bringing in investors as advisors. We found that Investor track record becomes more important as companies approach an exit (Series D+). This may be due to top investors having more experience at going through exit processes, and leveraging their contacts to make the process easier. We found that Executive and Founder experience are particularly important in Pre-Seed companies. This is a factor that has previously been substantiated in the literature \cite{beckwith2016,an2015}. At an early-stage of a company's development, there is little to rely on aside from the previous experience and skill-set of the founding team and staff. Finally, we found that Economic factors were most important at the Pre-Seed stage and have little effect at other stages. We would not expect economic factors to have a large effect on startup performance (at least compared to larger, more established companies) because startups are quite flexible, agile and target more niche markets. One explanation for the greater impact of Economic factors at the Pre-Seed stage is that perhaps more people leave established companies to launch startups when the economy is doing poorly, but these companies do not survive longer than the Pre-Seed stage. Overall, investigation into startup investment performance across the startup development life-cycle has previously been largely neglected. Most research in this field has been performed on either early-stage companies \cite{beckwiwth2016,stone2014,yuan2016,ahlers2015}, or much later-stage companies \cite{bhat2011}. We believe that this is the first comprehensive study that takes a broader cross-sectional approach.
+We evaluated our system with respect to the developmental stage of our target companies. We found considerable variation in models developed for companies of different stages. We find that Advisors are more important to earlier stage companies than late stage companies. This is a surprising and perhaps counter-intuitive finding that has not been previously substantiated in the literature. One explanation is that successful startups recruit experienced, influential advisors earlier to fill in gaps in their experience but by the time these startups reach later-rounds, this advantage is neutralised by the effect of bringing in investors as advisors. We found that Investor track record becomes more important as companies approach an exit (Series D+). This may be due to top investors having more experience at going through exit processes, and leveraging their contacts to make the process easier. We found that Executive and Founder experience are particularly important in Pre-Seed companies. This is a factor that has previously been substantiated in the literature \cite{beckwith2016,an2015}. At an early-stage of a company's development, there is little to rely on aside from the previous experience and skill-set of the founding team and staff. Finally, we found that Economic factors were most important at the Pre-Seed stage and have little effect at other stages. We would not expect economic factors to have a large effect on startup performance (at least compared to larger, more established companies) because startups are quite flexible, agile and target more niche markets. One explanation for the greater impact of Economic factors at the Pre-Seed stage is that perhaps more people leave established companies to launch startups when the economy is doing poorly, but these companies do not survive longer than the Pre-Seed stage. Overall, investigation into startup investment performance across the startup development life-cycle has previously been largely neglected. Most research in this field has been performed on either early-stage companies \cite{beckwith2016,stone2014,yuan2016,ahlers2015}, or much later-stage companies \cite{bhat2011}. We believe that this is the first comprehensive study that takes a broader cross-sectional approach.
 
 \subsection{Target Outcome}
 
 We evaluated our system with respect to different target outcomes (funding rounds, acquisitions, \gls{ipo}s and combinations thereof). We found that this experimentation generated the most amount of variance within our models of startup investment performance. We would expect to see broad similarities between the models that predict Acquisitions, \gls{ipo}s and their combination (Exits). There are some similarities between the models for these outcomes, especially between Acquisitions and Exits which is probably because Acquisitions make up a large proportion of Exits in our database. Investors and Executives have similar weightings across all three outcomes. As mentioned in the previous section, we expected Investors to be a good predictor of Exits because Investors with a track record should be able to better prepare startups better for Exit, in terms of procedures and connections. IPOs are slightly more weighted towards economic factors which makes sense given that IPOs are generally more sensitive to market conditions. Extra Round is most strongly related to Investors and Funding. This is an interesting finding, which may suggest that funding momentum plays a role in startup investment success (i.e. investors are pre-disposed to investing in companies that have already received investment, despite their fundamental characteristics). Finally, and surprisingly, the model for Extra Stage is most strongly weighted towards Advisors. It is unclear why Extra Stage, which is a combination of all other target outcomes, would not have weightings that tend towards the mean of the models of the other outcomes. Perhaps the ability of a startup to attract high-quality Advisors is a proxy for a more fundamental level of company quality. Further research should investigate this in more detail. Previous studies have separated predicting funding round outcomes \cite{beckwith2016,yuan2016,ahlers2015,an2015} from predicting exits \cite{bhat2011}. This separation in the literature is probably at least partially due to an interaction with developmental stage. Most studies of funding rounds focus on early-stage funding whereas exits tend to focus on later-stage companies. Our study bridges this divide in a way that is more holistic and thus more useful for investors.
 
-\subsection{Future Research}
+\subsection{Limitations}
 
 \subsubsection{Missing Features}
 
