--- a/submissions/thesis-original/tables/evaluation/clf_report_outcome.tex
+++ b/submissions/thesis-original/tables/evaluation/clf_report_outcome.tex
@@ -1,19 +1,20 @@
 \begin{tabular}{llrrrrrr} \toprule
-\multicolumn{2}{l}{Target Outcome}
-                        & N         & (\%)      & Accuracy  & Precision & Recall    & F1-Score  \\ \midrule
-Acquisition & Outcome=0 & 744,920   & (96.1)    & -         & 0.98      & 0.96      & 0.97      \\
-            & Outcome=1 & 30,236    & (3.9)     & -         & 0.37      & 0.61      & 0.46      \\
-            & Avg/Total & 775,156   & -         & 0.94      & 0.96      & 0.94      & 0.95      \\
-Exit        & Outcome=0 & 738,564   & (95.3)    & -         & 0.98      & 0.96      & 0.97      \\
-            & Outcome=1 & 36,592    & (4.7)     & -         & 0.42      & 0.60      & 0.49      \\
-            & Avg/Total & 775,156   & -         & 0.94      & 0.95      & 0.94      & 0.95      \\
-Extra Round & Outcome=0 & 694,804   & (89.6)    & -         & 1.00      & 0.81      & 0.89      \\
-            & Outcome=1 & 80,352    & (10.4)    & -         & 0.37      & 0.99      & 0.54      \\
-            & Avg/Total & 775,156   & -         & 0.83      & 0.93      & 0.83      & 0.86      \\
-Extra Stage & Outcome=0 & 673,688   & (86.9)    & -         & 0.93      & 0.84      & 0.89      \\
-            & Outcome=1 & 101,468   & (13.1)    & -         & 0.36      & 0.60      & 0.45      \\
-            & Avg/Total & 775,156   & -         & 0.81      & 0.86      & 0.81      & 0.83      \\
-IPO         & Outcome=0 & 768,207   & (99.1)    & -         & 0.99      & 0.99      & 0.99      \\
-            & Outcome=1 & 6,949     & (0.9)     & -         & 0.26      & 0.39      & 0.31      \\
-            & Avg/Total & 775,156   & -         & 0.98      & 0.99      & 0.98      & 0.99      \\
+\multicolumn{2}{l}{Target Outcome} & N       & \%   & Accuracy  & Precision  & Recall  & F1   \\ \midrule
+Extra Stage & Positive & 30,279  & 18.0 & -    & 0.50 & 0.61 & 0.55 \\
+            & Negative & 137,646 & 82.0 & -    & 0.91 & 0.86 & 0.89 \\
+            & Avg/Total & 167,925 & -    & 0.82 & 0.84 & 0.82 & 0.83 \\ \midrule
+Extra Round & Positive & 21,588  & 12.9 & -    & 0.34 & 0.61 & 0.44 \\
+            & Negative & 146,337 & 87.1 & -    & 0.93 & 0.83 & 0.88 \\
+            & Avg/Total & 167,925 & -    & 0.80 & 0.86 & 0.80 & 0.82 \\ \midrule
+Exit        & Positive & 12,372  & 17.4 & -    & 0.46 & 0.70 & 0.56 \\
+            & Negative & 155,553 & 92.6 & -    & 0.97 & 0.94 & 0.96 \\
+            & Avg/Total & 167,925 & -    & 0.92 & 0.94 & 0.92 & 0.93 \\ \midrule
+Acquisition & Positive & 10,566  & 16.3 & -    & 0.40 & 0.71 & 0.51 \\
+            & Negative & 157,359 & 93.7 & -    & 0.98 & 0.93 & 0.95 \\
+            & Avg/Total & 167,925 & -    & 0.91 & 0.94 & 0.91 & 0.93 \\ \midrule
+IPO         & Positive & 2,052   & 1.2  & -    & 0.28 & 0.57 & 0.37 \\
+            & Negative & 165,873 & 98.8 & -    & 0.99 & 0.98 & 0.99 \\
+            & Avg/Total & 167,925 & -    & 0.98 & 0.99 & 0.98 & 0.98 \\
 \bottomrule \end{tabular}
+
+% @ 4 Years
