--- a/submissions/thesis-original/tables/evaluation/clf_report_slice.tex
+++ b/submissions/thesis-original/tables/evaluation/clf_report_slice.tex
@@ -1,12 +1,14 @@
 \begin{tabular}{llrrrrrr} \toprule
-\multicolumn{2}{l}{Slice Date} & N & (\%)    & Accuracy & Precision   & Recall & F1-Score \\ \midrule
-2012 & Outcome=0 & 106,583 & (90.2\%) & - & 0.95 & 0.77 & 0.85 \\
-     & Outcome=1 & 11,538 & (9.8\%) & - & 0.22 & 0.59 & 0.32 \\
-     & Avg/Total & 118,121 & - & 0.76 & 0.88 & 0.76 & 0.80 \\
-2013 & Outcome=0 & 106,489 & (90.2\%) & - & 0.95 & 0.75 & 0.84 \\
-     & Outcome=1 & 11,535 & (9.8\%) & - & 0.21 & 0.62 & 0.32 \\
-     & Avg/Total & 118,024 & - & 0.74 & 0.88 & 0.74 & 0.79 \\
-2014 & Outcome=0 & 106,583 & (90.2\%) & - & 0.95 & 0.76 & 0.84 \\
-     & Outcome=1 & 11,538 & (9.8\%) & - & 0.21 & 0.61 & 0.32 \\
-     & Avg/Total & 118,121 & - & 0.74 & 0.88 & 0.74 & 0.79 \\
+\multicolumn{2}{l}{Slice Date} & N       & \%   & Accuracy  & Precision  & Recall  & F1   \\ \midrule
+2012 & Positive & 11,717  & 9.7  & -    & 0.28 & 0.52 & 0.36 \\
+     & Negative & 109,312 & 90.3 & -    & 0.94 & 0.86 & 0.90 \\
+     & Avg/Total & 121,029 & -    & 0.82 & 0.88 & 0.82 & 0.85 \\ \midrule
+2013 & Positive & 11,713  & 9.7  & -    & 0.27 & 0.55 & 0.36 \\
+     & Negative & 109,117 & 90.3 & -    & 0.95 & 0.84 & 0.89 \\
+     & Avg/Total & 120,830 & -    & 0.81 & 0.88 & 0.81 & 0.84 \\ \midrule
+2014 & Positive & 11,717  & 9.7  & -    & 0.27 & 0.60 & 0.37 \\
+     & Negative & 109,312 & 90.3 & -    & 0.95 & 0.82 & 0.88 \\
+     & Avg/Total & 121,029 & -    & 0.80 & 0.88 & 0.80 & 0.83 \\
 \bottomrule \end{tabular}
+
+% @ 2 Years
