--- a/submissions/thesis-original/tables/evaluation/clf_report_stage.tex
+++ b/submissions/thesis-original/tables/evaluation/clf_report_stage.tex
@@ -1,21 +1,24 @@
 \begin{tabular}{llrrrrrr} \toprule
-\multicolumn{2}{l}{Stage} & N & (\%)    & Accuracy & Precision   & Recall & F1-Score \\ \midrule
-Pre-Seed     & Outcome=0 & 491,154 & (90.4\%) & - & 0.94 & 0.88 & 0.91 \\
-             & Outcome=1 & 51,862 & (9.6\%) & - & 0.27 & 0.42 & 0.33 \\
-             & Avg/Total & 543,016 & - & 0.84 & 0.87 & 0.84 & 0.85 \\
-Seed         & Outcome=0 & 136,586 & (85.7\%) & - & 0.93 & 0.60 & 0.73 \\
-             & Outcome=1 & 22,872 & (14.3\%) & - & 0.24 & 0.74 & 0.36 \\
-             & Avg/Total & 159,458 & - & 0.62 & 0.83 & 0.62 & 0.68 \\
-Series A     & Outcome=0 & 23,861 & (67.6\%) & - & 0.87 & 0.18 & 0.30 \\
-             & Outcome=1 & 11,427 & (32.4\%) & - & 0.36 & 0.94 & 0.52 \\
-             & Avg/Total & 35,288 & - & 0.43 & 0.71 & 0.43 & 0.37 \\
-Series B     & Outcome=0 & 12,116 & (59.3\%) & - & 0.84 & 0.04 & 0.07 \\
-             & Outcome=1 & 8,314 & (40.7\%) & - & 0.41 & 0.99 & 0.58 \\
-             & Avg/Total & 20,430 & - & 0.43 & 0.66 & 0.43 & 0.28 \\
-Series C     & Outcome=0 & 5,555 & (55.2\%) & - & 0.82 & 0.03 & 0.07 \\
-             & Outcome=1 & 4,516 & (44.8\%) & - & 0.45 & 0.99 & 0.62 \\
-             & Avg/Total & 10,071 & - & 0.46 & 0.66 & 0.46 & 0.32 \\
-Series D+    & Outcome=0 & 4,416 & (64.1\%) & - & 0.89 & 0.02 & 0.03 \\
-             & Outcome=1 & 2,477 & (35.9\%) & - & 0.36 & 1.00 & 0.53 \\
-             & Avg/Total & 6,893 & - & 0.37 & 0.70 & 0.37 & 0.21 \\
+\multicolumn{2}{l}{Developmental Stage}
+                  & N       & \%   & Accuracy  & Precision  & Recall  & F1   \\ \midrule
+Pre-Seed    & Positive & 16,038  & 13.0 & -    & 0.39 & 0.54 & 0.45 \\
+            & Negative & 107,760 & 87.0 & -    & 0.93 & 0.88 & 0.90 \\
+            & Avg/Total & 123,798 & -    & 0.83 & 0.86 & 0.83 & 0.84 \\ \midrule
+Seed        & Positive & 5,472   & 21.7 & -    & 0.55 & 0.62 & 0.58 \\
+            & Negative & 19,692  & 78.3 & -    & 0.89 & 0.86 & 0.87 \\
+            & Avg/Total & 25,164  & -    & 0.81 & 0.82 & 0.81 & 0.81 \\ \midrule
+Series A    & Positive & 3,534   & 41.0 & -    & 0.72 & 0.72 & 0.72 \\
+            & Negative & 5,082   & 59.0 & -    & 0.81 & 0.80 & 0.80 \\
+            & Avg/Total & 8,616   & -    & 0.77 & 0.77 & 0.77 & 0.77 \\ \midrule
+Series B    & Positive & 2,682   & 48.9 & -    & 0.81 & 0.66 & 0.73 \\
+            & Negative & 2,802   & 51.1 & -    & 0.73 & 0.85 & 0.79 \\
+            & Avg/Total & 5,484   & -    & 0.76 & 0.77 & 0.76 & 0.76 \\ \midrule
+Series C    & Positive & 1,620   & 55.5 & -    & 0.85 & 0.77 & 0.81 \\
+            & Negative & 1,299   & 44.5 & -    & 0.74 & 0.83 & 0.78 \\
+            & Avg/Total & 2,919   & -    & 0.80 & 0.80 & 0.80 & 0.80 \\ \midrule
+Series D+   & Positive & 933     & 48.0 & -    & 0.91 & 0.73 & 0.81 \\
+            & Negative & 1,011   & 52.0 & -    & 0.79 & 0.93 & 0.86 \\
+            & Avg/Total & 1,944   & -    & 0.84 & 0.85 & 0.84 & 0.83 \\
 \bottomrule \end{tabular}
+
+% @ 4 Years
