--- a/submissions/thesis-original/tables/evaluation/example_predictions.tex
+++ b/submissions/thesis-original/tables/evaluation/example_predictions.tex
@@ -1,14 +1,17 @@
 \begin{tabular}{lccccccccc} \toprule
 & \multicolumn{4}{c}{Company} \\
-Feature                 & ChaCha        & Doctor.com    & Fab       & Mixpanel  \\ \midrule
-Age (Years)             & 7.4           & 0.6            & 4.3      & 3.8      \\
+                        & ChaCha        & Doctor.com    & Fab       & Mixpanel  \\ \midrule
+Feature (2013-04-09)    &               &               &           &           \\
+Age (Years)             & 7.4           & 0.6           & 4.3      & 3.8      \\
 Funding Raised (\$m)    & 92.0          & 0.0           & 171.0     & 12.0      \\
-Funding Rounds (N)      & 8             & 0             & 8         & 4         \\ \midrule
-Feature Stage           & Series D+     & Pre-Seed      & Series C  & Series A  \\
-Outcome Stage           & Series D+     & Series A      & Acquired  & Series B  \\ \midrule
-Predicted Outcome       & \cmark        & \xmark        & \cmark    & \cmark    \\
-Actual Outcome          & \xmark        & \cmark        & \cmark    & \cmark    \\
+Funding Rounds (N)      & 8             & 0             & 8         & 4         \\
+Developmental Stage     & Series D+     & Pre-Seed      & Series C  & Series A  \\
+Predicted Outcome       & \cmark        & \xmark        & \cmark    & \cmark    \\ \midrule
+Outcome (2017-04-04)    &               &               &           &           \\
+Age (Years)             & 11.4          & 4.6           & 8.3       & 7.8      \\
+Funding Raised (\$m)    & 96.0          & 5.0           & 336.0     & 77.0      \\
+Funding Rounds (N)      & 9             & 3             & 11        & 5         \\
+Developmental Stage     & Series D+     & Series A      & Acquired  & Series B  \\
+Actual Outcome          & \xmark        & \cmark        & \cmark    & \cmark    \\ \midrule
 Correct Prediction      & \xmark        & \xmark        & \cmark    & \cmark    \\
 \bottomrule \end{tabular}
-
-%2013 - 2017 (4 Years) // Extra Stage
