--- a/submissions/thesis-original/appendices/design/feature_selection.tex
+++ b/submissions/thesis-original/appendices/design/feature_selection.tex
@@ -5,8 +5,8 @@ We develop a conceptual framework relating startup potential and investor confid
 
 \begin{figure}[!htbp]
 \centering
-\input{../figures/litreview/framework_details}
-\caption[Conceputal framework for startup investment (detailed)]{Proposed conceptual framework for startup investment. This extended version of the framework includes features identified by empirical studies of startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}.}
+\input{../figures/design/framework_details}
+\caption[Conceptual framework for startup investment (detailed)]{Proposed conceptual framework for startup investment. This extended version of the framework includes features identified by empirical studies of startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}.}
 \label{fig:appendix:features:framework_details}
 \end{figure}
 
