--- a/submissions/thesis-original/tables/design/descriptives_overall_stage.tex
+++ b/submissions/thesis-original/tables/design/descriptives_overall_stage.tex
@@ -1,14 +1,18 @@
-\begin{tabular}{lrrrrrrrrrrrr}
+\begin{tabular}{lrrrrrrrrrrr}
 \toprule
-{} &     Obs & Age (Years) &        & Funding Raised (USD, millions) &         & Funding Rounds (N) &        & Patent Filings (N) &      &      & Available Features (N) &        \\
-{} &       N &         IQR & Median &                            IQR &  Median &                IQR & Median &               50th & 75th & 90th &                    IQR & Median \\
-\midrule
-Pre-Seed  &  113915 &       3.737 &  4.362 &                          0.000 &   0.000 &                  0 &      0 &                  0 &    0 &    0 &                  128.0 &     25 \\
-Seed      &   38942 &       4.003 &  4.663 &                          1.295 &   0.250 &                  1 &      1 &                  0 &    0 &    1 &                  125.0 &    178 \\
-Series A  &    6615 &       5.005 &  5.693 &                          7.906 &   4.400 &                  2 &      2 &                  0 &    0 &    2 &                  117.5 &    239 \\
-Series B  &    3342 &       5.918 &  7.608 &                         22.032 &  14.891 &                  2 &      3 &                  0 &    0 &    4 &                   87.0 &    255 \\
-Series C  &    1610 &       5.523 &  8.696 &                         45.881 &  35.285 &                  2 &      3 &                  0 &    1 &    9 &                   80.0 &    305 \\
-Series D+ &     998 &       5.005 &  9.696 &                         90.300 &  74.385 &                  3 &      5 &                  0 &    4 &   19 &                   69.0 &    319 \\
-Included  &  165422 &       4.003 &  4.688 &                          3.970 &   0.000 &                  1 &      1 &                  0 &    0 &    1 &                  145.0 &     90 \\
+Stage &	Obs &
+\multicolumn{2}{c}{\thead{Age\\(Years)}} &
+\multicolumn{2}{c}{\thead{Funding Raised\\(USD, M)}}	&
+\multicolumn{2}{c}{\thead{Funding\\Rounds (N)}}	&
+\multicolumn{2}{c}{\thead{Patent\\Filings (N)}}	&
+\multicolumn{2}{c}{\thead{Available\\Features (N)}}	\\
+{}          & N         & 50th  & 75th  & 50th  & 75th  & 50th  & 75th  & 75th  & 90th  & 50th  & 75th \\ \midrule
+Pre-Seed    & 113,915   & 4.36  & 6.36  & 0.00  & 0.00  & 0     & 0     & 0     & 0     & 25    & 133 \\
+Seed        & 38,942    & 4.66  & 6.69  & 0.25  & 1.30  & 1     & 2     & 0     & 1     & 178   & 231 \\
+Series A    & 6,615     & 5.69  & 8.70  & 4.40  & 9.41  & 2     & 3     & 0     & 2     & 239   & 302 \\
+Series B    & 3,342     & 7.61  & 10.70 & 14.89 & 28.20 & 3     & 4     & 0     & 4     & 255   & 314 \\
+Series C    & 1,610     & 8.70  & 11.70 & 35.29 & 62.00 & 3     & 5     & 1     & 9     & 305   & 321 \\
+Series D+   & 998       & 9.70  & 12.70 & 74.39 & 130.8 & 5     & 7     & 4     & 19    & 319   & 330 \\
+Included    & 165,422   & 4.69  & 6.69  & 0.00  & 4.00  & 1     & 2     & 0     & 1     & 90    & 160 \\
 \bottomrule
 \end{tabular}
