--- a/submissions/thesis-original/tables/evaluation/clf_report_window.tex
+++ b/submissions/thesis-original/tables/evaluation/clf_report_window.tex
@@ -1,12 +1,13 @@
 \begin{tabular}{llrrrrrr} \toprule
-\multicolumn{2}{l}{Forecast Window} & N & (\%)    & Accuracy & Precision   & Recall & F1-Score \\ \midrule
-2 Years & Outcome=0 & 319,655 & (90.2\%) & - & 0.95 & 0.76 & 0.84 \\
-        & Outcome=1 & 34,611 & (9.8\%) & - & 0.22 & 0.61 & 0.32 \\
-        & Avg/Total & 354,266 & - & 0.75 & 0.88 & 0.75 & 0.79 \\
-3 Years & Outcome=0 & 216,816 & (85.6\%) & - & 0.93 & 0.77 & 0.84 \\
-        & Outcome=1 & 36,602 & (14.4\%) & - & 0.32 & 0.66 & 0.43 \\
-        & Avg/Total & 253,418 & - & 0.75 & 0.84 & 0.75 & 0.78 \\
-4 Years & Outcome=0 & 137,217 & (81.9\%) & - & 0.91 & 0.81 & 0.86 \\
-        & Outcome=1 & 30,255 & (19.1\%) & - & 0.43 & 0.65 & 0.52 \\
-        & Avg/Total & 167,472 & - & 0.78 & 0.82 & 0.78 & 0.80 \\
+\multicolumn{2}{l}{Forecast Window}
+              & N       & \%   & Accuracy  & Precision  & Recal  & F1   \\ \midrule
+2 Years & Positive & 35,147  & 9.7  & -    & 0.27 & 0.56 & 0.36 \\
+        & Negative & 327,741 & 90.3 & -    & 0.95 & 0.84 & 0.89 \\
+        & Avg/Total & 362,888 & -    & 0.81 & 0.88 & 0.81 & 0.84 \\ \midrule
+3 Years & Positive & 37,169  & 14.3 & -    & 0.40 & 0.62 & 0.48 \\
+        & Negative & 222,540 & 85.7 & -    & 0.93 & 0.84 & 0.88 \\
+        & Avg/Total & 259,709 & -    & 0.81 & 0.85 & 0.81 & 0.83 \\ \midrule
+4 Years & Positive & 30,279  & 18.0 & -    & 0.49 & 0.62 & 0.55 \\
+        & Negative & 137,646 & 82.0 & -    & 0.91 & 0.86 & 0.88 \\
+        & Avg/Total & 167,925 & -    & 0.82 & 0.84 & 0.82 & 0.82 \\
 \bottomrule \end{tabular}
