--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -8,7 +8,11 @@
 \usepackage{pdflscape}
 \usepackage{rotating}
 \usepackage{afterpage}
-\usepackage[giveninits=true,backend=biber,maxbibnames=99]{biblatex}
+\usepackage[
+  giveninits=true,
+  backend=biber,
+  style=numeric,
+  sorting=none]{biblatex}
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{tabularx}
@@ -18,6 +22,7 @@
 \usepackage{pgf}
 \usepackage{tikz}
 \usepackage{tikzscale}
+\usepackage{float}
 \usepackage{pifont}
 \usepackage{abbrevs}
 \usepackage{pdfpages}
@@ -57,6 +62,47 @@
 % Configure bibliography
 \DeclareNameAlias{default}{last-first}
 \addbibresource{../references/primary.bib}
+
+\AtBeginBibliography{%
+  \renewcommand*{\mkbibnamefamily}[1]{\textsc{#1}}%
+  \renewcommand{\multinamedelim}{\addcomma\space} %% commas between authors
+  \renewcommand{\finalnamedelim}{\addcomma\addspace\textsc{and}\space}
+}
+
+\DefineBibliographyStrings{english}{%
+ andothers = {\addcomma\addspace\textsc{et\addabbrvspace al}\adddot},
+ and = {\textsc{and}}
+}
+
+\renewcommand*{\labelnamepunct}{\space\space}
+
+\DeclareFieldFormat
+  [article,inbook,incollection,inproceedings,patent,thesis,unpublished]
+  {title}{#1} % no prefix for the `title` field
+
+\renewbibmacro{in:}{%
+  \ifentrytype{article}{%
+  }{%
+    \printtext{\bibstring{in}\intitlepunct}%
+  }%
+}
+
+\renewbibmacro*{volume+number+eid}{%
+  \printfield{volume}%
+  \setunit*{\addcomma\space}%
+  \printfield{number}%
+  \setunit{\addcomma\space}%
+  \printfield{eid}}
+
+\DeclareFieldFormat{pages}{#1} % no prefix for the `pages` field
+
+\renewbibmacro*{publisher+location+date}{%
+  \printlist{publisher}%
+  \setunit*{\addcomma\space}%
+  \printlist{location}%
+  \setunit*{\addcomma\space}%
+  \usebibmacro{date}%
+  \newunit}
 
 % Namelist stuff for proposal
 \newcommand{\namelistlabel}[1]{\mbox{#1}\hfil}
@@ -157,7 +203,7 @@
 
 \begin{abstract}
 
-Venture Capital (VC) firms face the challenge of identifying a few outstanding investments from a sea of opportunities. The VC industry requires better systems to manage labour-intensive tasks like investment screening. Previous approaches to improve VC investment screening have common limitations: small, private datasets, a focus on early-stage investment, and limited feature sets. To address these limitations, a multi-stage VC investment screening system is presented. The core of the system is an optimisation process that generates a supervised learning classifier which is applied to data collected from large, public online databases (CrunchBase and PatentsView). The system is evaluated against three criteria: predictive power, robustness, and efficiency. The system satisfies each of these criteria. The system makes predictions with better or comparable performance to previous studies, while addressing a far larger domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. The system is robust, with only minimal variance in performance when trained on different historical datasets. The system is efficient in that it is near-autonomous and automatically adapts to changes in dataset and prediction task. This project also contributes a comprehensive empirical study of models of startup investment performance. The prior experience of a startup's advisors, executives and founders is found to be the greatest predictor of startup investment performance. Ultimately, this project makes significant steps towards further automation in the VC industry.
+Venture Capital (VC) firms face the challenge of identifying a few outstanding investments from a sea of opportunities. The VC industry requires better systems to manage labour-intensive tasks like investment screening. Previous approaches to improve VC investment screening have common limitations: small, private datasets, a focus on early-stage investment, and basic feature sets. To address these limitations, a multi-stage VC investment screening system is presented. The core of the system is an optimisation process that generates a supervised learning classifier which is applied to data collected from large, public online databases (CrunchBase and PatentsView). The system is evaluated against three criteria: practicality, robustness, and versatility. The system satisfies each of these criteria. The system is practical in that it is near-autonomous. The system is robust in that it has only minimal variance in performance when trained on historical datasets. Finally, the system is versatile in that it addresses a large domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. This project also contributes a comprehensive empirical study of startup performance. The prior experience of a startup's advisors, executives and founders is found to be the greatest predictor of startup performance. Ultimately, this project makes steps towards automation in the VC industry.
 
 \end{abstract}
 
@@ -165,15 +211,15 @@ Venture Capital (VC) firms face the challenge of identifying a few outstanding i
 
 \begin{comment}
 
-First and foremost I would like to thank my supervisors, Professor Melinda Hodkiewicz and Dr Tim French. Melinda and Tim are both fantastic academics and educators in their own right, and their strengths and talents perfectly complemented each other on this project. I am extremely grateful for Melinda and Tim's meticulous feedback and advice throughout the course of this year.
+First and foremost I would like to thank my supervisors, Melinda Hodkiewicz and Tim French. Melinda and Tim are both fantastic academics and educators in their own right, and their strengths and talents perfectly complemented each other on this project. I am extremely grateful for Melinda and Tim's meticulous feedback and advice throughout the course of this year.
 
 My time at university has been an amazing educational experience and I primarily credit that to opportunities afforded to me by the The University of Western Australia, the Fogarty Foundation, and St Catherine's College.
 
-I would like to thank The University of Western Australia for guiding me through my, admittedly unorthodox, degree. Starting in Biomedical Sciences, I never imagined I would go on to complete a Double Major in Psychology and finally Honours in Computer Science. In particular, I'd like to acknowledge the fantastic Bachelor of Philosophy (Hons) program, and Professor Kathy Sanders and Professor Jenna Mead for their advice and support.
+I would like to thank The University of Western Australia for guiding me through my, admittedly unorthodox, degree. Starting in Biomedical Sciences, I never imagined I would go on to complete a Double Major in Psychology and finally Honours in Computer Science. In particular, I'd like to acknowledge the fantastic Bachelor of Philosophy (Hons) program, and Kathy Sanders and Jenna Mead for their advice and support.
 
-I would like to thank the Fogarty Foundation. The Fogarty Foundation has provided support to me far beyond my UWA Fogarty Foundation Scholarship. The Fogarty Foundation was the catalyst that led to my involvement in Teach Learn Grow, encouraged me to start Bloom, and took me to Stanford University. In particular, I'd like to acknowledge Robyn King, Kathryn Clements, and Dr Annie Fogarty AM for their incredible support throughout my degree.
+I would like to thank the Fogarty Foundation. The Fogarty Foundation has provided support to me far beyond my UWA Fogarty Foundation Scholarship. The Fogarty Foundation was the catalyst that led to my involvement in Teach Learn Grow, encouraged me to start Bloom, and took me to Stanford University. In particular, I'd like to acknowledge Robyn King, Kathryn Clements, and Annie Fogarty for their incredible support throughout my degree.
 
-I would like to thank St Catherine's College. In particular, Fiona Crowe and Mandy McFarland, who are truly inspiring leaders that have backed myself and Bloom 110\%. St Catherine's College is my extended family and I am incredibly grateful for their support. Go St Cat's!
+I would like to thank St Catherine's College. In particular, Fiona Crowe and Mandy McFarland, who are truly inspiring leaders that have backed myself and Bloom 110\%. St Catherine's College is my extended family and I am incredibly grateful for their support.
 
 Finally, I would like to thank my friends and family who encouraged and supported me throughout my time at university.
 
